[gd_scene load_steps=2 format=3 uid="uid://wa47ch1e726p"]

[ext_resource type="Script" uid="uid://c4rrggp4xg43s" path="res://components/move_component.gd" id="1_t1wx1"]

[node name="MoveComponent" type="Node3D"]
script = ExtResource("1_t1wx1")

[node name="MoveTimer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="timeout" from="MoveTimer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
